--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Inventaire sécurisé</title>
+    <title>Inventaire </title>
     <!-- Lien vers le fichier CSS externe -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -10,7 +10,7 @@
     <!-- Logo en haut à droite -->
     <img src="Images/logo.png" alt="Logo" class="logo" />
 
-    <h1>Inventaire Sécurisé</h1>
+    <h1>Inventaire </h1>
     
     <!-- Section de mot de passe -->
     <div id="passwordSection">
