--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inventaire</title>
-    
+    <href="">
     <!-- CSS intégré pour le style -->
     <style>
         /* Style général */
@@ -99,7 +99,7 @@
             position: fixed;
             top: 10px;
             right: 10px;
-            width: 150px;
+            width: 160px;
             height: auto;
             z-index: 1000;
         }
