--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Inventaire</title>
-    <href="">
+    <!-- Import Firebase SDK -->
+
     <!-- CSS intégré pour le style -->
     <style>
         /* Style général */
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #f5f758, #3eb4a3, #f59b9e); /* Fond dégradé inspiré du logo */
+            background: linear-gradient(135deg, #f5f758, #3eb4a3, #f59b9e);
             color: #333;
             margin: 0;
             padding: 0;
@@ -18,44 +19,38 @@
             align-items: center;
             min-height: 100vh;
         }
-
         /* Style du titre principal */
         h1 {
             font-size: 2.5em;
             color: #4a90e2;
             margin-top: 20px;
-            color: #333; /* Couleur sombre pour contraster avec le fond */
             text-align: center;
-            text-shadow: 1px 1px 2px #f5f758; /* Ombre légère pour ressortir */
+            text-shadow: 1px 1px 2px #f5f758;
         }
-
         /* Style des sections */
         #inventorySection, #addSection {
-            display: block;
-            background-color: #ffffff; /* Fond blanc pour contraste */
-            border-radius: 15px; /* Bordures arrondies */
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Ombre plus marquée */
+            background-color: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
             padding: 20px;
             margin-top: 20px;
             width: 90%;
             max-width: 600px;
         }
-
         /* Style des éléments de l'inventaire */
         .item {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: #f5f758; /* Couleur jaune inspirée du logo */
+            background-color: #f5f758;
             padding: 10px;
             margin-bottom: 15px;
             border-radius: 8px;
             box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
         }
-
         /* Style des boutons */
         button {
-            background-color: #3eb4a3; /* Couleur verte inspirée du logo */
+            background-color: #3eb4a3;
             color: #fff;
             border: none;
             border-radius: 8px;
@@ -64,26 +59,12 @@
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
-
         button:hover {
             background-color: #2e8d83;
         }
-
         button:active {
             background-color: #246e67;
         }
-
-        /* Champ de quantité */
-        .quantity {
-            width: 60px;
-            text-align: center;
-            font-size: 1em;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            padding: 5px;
-            background-color: #f4f4f4;
-        }
-
         /* Champ de texte pour le nom de l'article */
         input[type="text"] {
             width: 60%;
@@ -93,39 +74,14 @@
             border-radius: 5px;
             margin-right: 10px;
         }
-
-        /* Style pour le logo */
-        .logo {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            width: 160px;
-            height: auto;
-            z-index: 1000;
-        }
-
-        /* Style du bouton pour ajouter un nouvel article */
-        #addSection button {
-            margin-top: 10px;
-            background-color: #f59b9e; /* Couleur rose inspirée du logo */
-        }
-
-        #addSection button:hover {
-            background-color: #e48286;
-        }
     </style>
 </head>
 <body>
-    <!-- Logo en haut à droite -->
-    <img src="Images/logo.png" alt="Logo" class="logo" />
-
     <h1>Inventaire</h1>
-    
     <!-- Section inventaire -->
     <div id="inventorySection">
         <div id="inventory"></div>
     </div>
-
     <!-- Section pour ajouter un nouvel article -->
     <div id="addSection">
         <h2>Ajouter un nouvel article</h2>
@@ -133,26 +89,47 @@
         <button onclick="addItem()">Ajouter</button>
     </div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            loadInventory();
-        });
+        // Configuration de Firebase
+        <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-        // Fonction pour charger les articles enregistrés dans le Local Storage
-        function loadInventory() {
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
+    authDomain: "inventaire-poplab.firebaseapp.com",
+    projectId: "inventaire-poplab",
+    storageBucket: "inventaire-poplab.firebasestorage.app",
+    messagingSenderId: "490095435720",
+    appId: "1:490095435720:web:7ce0713993e42b59086afd",
+    measurementId: "G-19DVTE3W11"
+  };
+
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+        </script>
+    <script>
+        // Charger l'inventaire depuis Firestore
+        async function loadInventory() {
             const inventoryDiv = document.getElementById('inventory');
             inventoryDiv.innerHTML = '';
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
 
-            items.forEach(item => {
-                createItemElement(item.id, item.name, item.quantity);
+            const snapshot = await db.collection('inventory').get();
+            snapshot.forEach(doc => {
+                const item = doc.data();
+                createItemElement(doc.id, item.name, item.quantity);
             });
         }
 
-        // Fonction pour créer un élément d'article dans l'HTML
+        // Créer un élément d'article dans le HTML
         function createItemElement(id, name, quantity) {
             const inventoryDiv = document.getElementById('inventory');
-
             const itemDiv = document.createElement('div');
             itemDiv.className = 'item';
             itemDiv.id = id;
@@ -193,73 +170,59 @@
             inventoryDiv.appendChild(itemDiv);
         }
 
-        // Fonction pour ajouter un nouvel article
-        function addItem() {
+        // Ajouter un nouvel article
+        async function addItem() {
             const newItemName = document.getElementById('newItemName').value.trim();
             if (!newItemName) return;
 
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const newItem = {
-                id: `item${Date.now()}`,
+            await db.collection('inventory').add({
                 name: newItemName,
                 quantity: 0
-            };
-            items.push(newItem);
-            localStorage.setItem('inventoryItems', JSON.stringify(items));
-
-            createItemElement(newItem.id, newItem.name, newItem.quantity);
+            });
             document.getElementById('newItemName').value = '';
-        }
-
-        // Fonction pour incrémenter la quantité
-        function increment(id) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const item = items.find(item => item.id === id);
-            if (item) {
-                item.quantity += 1;
-                localStorage.setItem('inventoryItems', JSON.stringify(items));
-                document.getElementById(id).querySelector('.quantity').value = item.quantity;
-            }
-        }
-
-        // Fonction pour décrémenter la quantité
-        function decrement(id) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const item = items.find(item => item.id === id);
-            if (item && item.quantity > 0) {
-                item.quantity -= 1;
-                localStorage.setItem('inventoryItems', JSON.stringify(items));
-                document.getElementById(id).querySelector('.quantity').value = item.quantity;
-            }
-        }
-
-        // Fonction pour mettre à jour le nom de l'article
-        function updateName(id, newName) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const item = items.find(item => item.id === id);
-            if (item) {
-                item.name = newName;
-                localStorage.setItem('inventoryItems', JSON.stringify(items));
-            }
-        }
-
-        // Fonction pour mettre à jour la quantité directement dans le champ de saisie
-        function updateQuantity(id, newQuantity) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const item = items.find(item => item.id === id);
-            if (item && newQuantity >= 0) {
-                item.quantity = parseInt(newQuantity);
-                localStorage.setItem('inventoryItems', JSON.stringify(items));
-            }
-        }
-
-        // Fonction pour supprimer un article
-        function removeItem(id) {
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            const updatedItems = items.filter(item => item.id !== id);
-            localStorage.setItem('inventoryItems', JSON.stringify(updatedItems));
             loadInventory();
         }
+
+        // Incrémenter la quantité
+        async function increment(id) {
+            const docRef = db.collection('inventory').doc(id);
+            const doc = await docRef.get();
+            if (doc.exists) {
+                await docRef.update({ quantity: doc.data().quantity + 1 });
+                loadInventory();
+            }
+        }
+
+        // Décrémenter la quantité
+        async function decrement(id) {
+            const docRef = db.collection('inventory').doc(id);
+            const doc = await docRef.get();
+            if (doc.exists && doc.data().quantity > 0) {
+                await docRef.update({ quantity: doc.data().quantity - 1 });
+                loadInventory();
+            }
+        }
+
+        // Mettre à jour le nom de l'article
+        async function updateName(id, newName) {
+            const docRef = db.collection('inventory').doc(id);
+            await docRef.update({ name: newName });
+        }
+
+        // Mettre à jour la quantité directement
+        async function updateQuantity(id, newQuantity) {
+            const docRef = db.collection('inventory').doc(id);
+            await docRef.update({ quantity: parseInt(newQuantity) });
+        }
+
+        // Supprimer un article
+        async function removeItem(id) {
+            await db.collection('inventory').doc(id).delete();
+            loadInventory();
+        }
+
+        // Charger l'inventaire au chargement de la page
+        document.addEventListener("DOMContentLoaded", loadInventory);
     </script>
 </body>
 </html>
