--- a/index.html
+++ b/index.html
@@ -4,8 +4,137 @@
     <meta charset="UTF-8">
     <title>Inventaire</title>
     <!-- Import Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+        import { getFirestore, collection, getDocs, addDoc, doc, updateDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-    <!-- CSS intégré pour le style -->
+        // Configuration Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
+            authDomain: "inventaire-poplab.firebaseapp.com",
+            projectId: "inventaire-poplab",
+            storageBucket: "inventaire-poplab.appspot.com",
+            messagingSenderId: "490095435720",
+            appId: "1:490095435720:web:7ce0713993e42b59086afd",
+            measurementId: "G-19DVTE3W11"
+        };
+
+        // Initialize Firebase and Firestore
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+        // Fonction pour charger l'inventaire depuis Firestore
+        async function loadInventory() {
+            const inventoryDiv = document.getElementById('inventory');
+            inventoryDiv.innerHTML = '';
+
+            const querySnapshot = await getDocs(collection(db, "inventory"));
+            querySnapshot.forEach((doc) => {
+                const item = doc.data();
+                createItemElement(doc.id, item.name, item.quantity);
+            });
+        }
+
+        // Fonction pour créer un élément d'article dans le HTML
+        function createItemElement(id, name, quantity) {
+            const inventoryDiv = document.getElementById('inventory');
+            const itemDiv = document.createElement('div');
+            itemDiv.className = 'item';
+            itemDiv.id = id;
+
+            const nameInput = document.createElement('input');
+            nameInput.type = 'text';
+            nameInput.value = name;
+            nameInput.onchange = () => updateName(id, nameInput.value);
+            itemDiv.appendChild(nameInput);
+
+            const decrementButton = document.createElement('button');
+            decrementButton.textContent = '-';
+            decrementButton.onclick = () => decrement(id);
+            itemDiv.appendChild(decrementButton);
+
+            const quantityInput = document.createElement('input');
+            quantityInput.type = 'number';
+            quantityInput.value = quantity;
+            quantityInput.min = 0;
+            quantityInput.className = 'quantity';
+            quantityInput.onchange = () => updateQuantity(id, quantityInput.value);
+            itemDiv.appendChild(quantityInput);
+
+            const incrementButton = document.createElement('button');
+            incrementButton.textContent = '+';
+            incrementButton.onclick = () => increment(id);
+            itemDiv.appendChild(incrementButton);
+
+            const removeButton = document.createElement('button');
+            removeButton.textContent = 'Supprimer';
+            removeButton.onclick = () => removeItem(id);
+            itemDiv.appendChild(removeButton);
+
+            inventoryDiv.appendChild(itemDiv);
+        }
+
+        // Fonction pour ajouter un nouvel article
+        async function addItem() {
+            const newItemName = document.getElementById('newItemName').value.trim();
+            if (!newItemName) return;
+
+            await addDoc(collection(db, "inventory"), {
+                name: newItemName,
+                quantity: 0
+            });
+            document.getElementById('newItemName').value = '';
+            loadInventory();
+        }
+
+        // Fonction pour incrémenter la quantité
+        async function increment(id) {
+            const itemRef = doc(db, "inventory", id);
+            const itemSnapshot = await itemRef.get();
+            if (itemSnapshot.exists()) {
+                await updateDoc(itemRef, {
+                    quantity: itemSnapshot.data().quantity + 1
+                });
+                loadInventory();
+            }
+        }
+
+        // Fonction pour décrémenter la quantité
+        async function decrement(id) {
+            const itemRef = doc(db, "inventory", id);
+            const itemSnapshot = await itemRef.get();
+            if (itemSnapshot.exists() && itemSnapshot.data().quantity > 0) {
+                await updateDoc(itemRef, {
+                    quantity: itemSnapshot.data().quantity - 1
+                });
+                loadInventory();
+            }
+        }
+
+        // Fonction pour mettre à jour le nom de l'article
+        async function updateName(id, newName) {
+            const itemRef = doc(db, "inventory", id);
+            await updateDoc(itemRef, { name: newName });
+        }
+
+        // Fonction pour mettre à jour la quantité directement
+        async function updateQuantity(id, newQuantity) {
+            const itemRef = doc(db, "inventory", id);
+            await updateDoc(itemRef, { quantity: parseInt(newQuantity) });
+        }
+
+        // Fonction pour supprimer un article
+        async function removeItem(id) {
+            const itemRef = doc(db, "inventory", id);
+            await deleteDoc(itemRef);
+            loadInventory();
+        }
+
+        // Charger l'inventaire au chargement de la page
+        document.addEventListener("DOMContentLoaded", loadInventory);
+    </script>
+
+    <!-- CSS pour le style -->
     <style>
         /* Style général */
         body {
@@ -19,25 +148,7 @@
             align-items: center;
             min-height: 100vh;
         }
-        /* Style du titre principal */
-        h1 {
-            font-size: 2.5em;
-            color: #4a90e2;
-            margin-top: 20px;
-            text-align: center;
-            text-shadow: 1px 1px 2px #f5f758;
-        }
-        /* Style des sections */
-        #inventorySection, #addSection {
-            background-color: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-            padding: 20px;
-            margin-top: 20px;
-            width: 90%;
-            max-width: 600px;
-        }
-        /* Style des éléments de l'inventaire */
+        /* Style des éléments */
         .item {
             display: flex;
             align-items: center;
@@ -46,33 +157,6 @@
             padding: 10px;
             margin-bottom: 15px;
             border-radius: 8px;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
-        }
-        /* Style des boutons */
-        button {
-            background-color: #3eb4a3;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            padding: 5px 10px;
-            font-size: 0.9em;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #2e8d83;
-        }
-        button:active {
-            background-color: #246e67;
-        }
-        /* Champ de texte pour le nom de l'article */
-        input[type="text"] {
-            width: 60%;
-            padding: 8px;
-            font-size: 1em;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            margin-right: 10px;
         }
     </style>
 </head>
@@ -88,141 +172,5 @@
         <input type="text" id="newItemName" placeholder="Nom de l'article">
         <button onclick="addItem()">Ajouter</button>
     </div>
-
-        // Configuration de Firebase
-        <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
-    authDomain: "inventaire-poplab.firebaseapp.com",
-    projectId: "inventaire-poplab",
-    storageBucket: "inventaire-poplab.firebasestorage.app",
-    messagingSenderId: "490095435720",
-    appId: "1:490095435720:web:7ce0713993e42b59086afd",
-    measurementId: "G-19DVTE3W11"
-  };
-
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-        </script>
-    <script>
-        // Charger l'inventaire depuis Firestore
-        async function loadInventory() {
-            const inventoryDiv = document.getElementById('inventory');
-            inventoryDiv.innerHTML = '';
-
-            const snapshot = await db.collection('inventory').get();
-            snapshot.forEach(doc => {
-                const item = doc.data();
-                createItemElement(doc.id, item.name, item.quantity);
-            });
-        }
-
-        // Créer un élément d'article dans le HTML
-        function createItemElement(id, name, quantity) {
-            const inventoryDiv = document.getElementById('inventory');
-            const itemDiv = document.createElement('div');
-            itemDiv.className = 'item';
-            itemDiv.id = id;
-
-            // Champ de modification de nom
-            const nameInput = document.createElement('input');
-            nameInput.type = 'text';
-            nameInput.value = name;
-            nameInput.onchange = () => updateName(id, nameInput.value);
-            itemDiv.appendChild(nameInput);
-
-            // Boutons + et -
-            const decrementButton = document.createElement('button');
-            decrementButton.textContent = '-';
-            decrementButton.onclick = () => decrement(id);
-            itemDiv.appendChild(decrementButton);
-
-            // Champ de quantité modifiable
-            const quantityInput = document.createElement('input');
-            quantityInput.type = 'number';
-            quantityInput.value = quantity;
-            quantityInput.min = 0;
-            quantityInput.className = 'quantity';
-            quantityInput.onchange = () => updateQuantity(id, quantityInput.value);
-            itemDiv.appendChild(quantityInput);
-
-            const incrementButton = document.createElement('button');
-            incrementButton.textContent = '+';
-            incrementButton.onclick = () => increment(id);
-            itemDiv.appendChild(incrementButton);
-
-            // Bouton de suppression
-            const removeButton = document.createElement('button');
-            removeButton.textContent = 'Supprimer';
-            removeButton.onclick = () => removeItem(id);
-            itemDiv.appendChild(removeButton);
-
-            inventoryDiv.appendChild(itemDiv);
-        }
-
-        // Ajouter un nouvel article
-        async function addItem() {
-            const newItemName = document.getElementById('newItemName').value.trim();
-            if (!newItemName) return;
-
-            await db.collection('inventory').add({
-                name: newItemName,
-                quantity: 0
-            });
-            document.getElementById('newItemName').value = '';
-            loadInventory();
-        }
-
-        // Incrémenter la quantité
-        async function increment(id) {
-            const docRef = db.collection('inventory').doc(id);
-            const doc = await docRef.get();
-            if (doc.exists) {
-                await docRef.update({ quantity: doc.data().quantity + 1 });
-                loadInventory();
-            }
-        }
-
-        // Décrémenter la quantité
-        async function decrement(id) {
-            const docRef = db.collection('inventory').doc(id);
-            const doc = await docRef.get();
-            if (doc.exists && doc.data().quantity > 0) {
-                await docRef.update({ quantity: doc.data().quantity - 1 });
-                loadInventory();
-            }
-        }
-
-        // Mettre à jour le nom de l'article
-        async function updateName(id, newName) {
-            const docRef = db.collection('inventory').doc(id);
-            await docRef.update({ name: newName });
-        }
-
-        // Mettre à jour la quantité directement
-        async function updateQuantity(id, newQuantity) {
-            const docRef = db.collection('inventory').doc(id);
-            await docRef.update({ quantity: parseInt(newQuantity) });
-        }
-
-        // Supprimer un article
-        async function removeItem(id) {
-            await db.collection('inventory').doc(id).delete();
-            loadInventory();
-        }
-
-        // Charger l'inventaire au chargement de la page
-        document.addEventListener("DOMContentLoaded", loadInventory);
-    </script>
 </body>
 </html>
