--- a/index.html
+++ b/index.html
@@ -187,5 +187,29 @@
         }
 
     </script>
+
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
+    authDomain: "inventaire-poplab.firebaseapp.com",
+    projectId: "inventaire-poplab",
+    storageBucket: "inventaire-poplab.firebasestorage.app",
+    messagingSenderId: "490095435720",
+    appId: "1:490095435720:web:7ce0713993e42b59086afd",
+    measurementId: "G-19DVTE3W11"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
