--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inventaire sécurisé</title>
-    <style>
-        <link rel="stylesheet" href="style.css">
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Logo en haut à droite -->
@@ -25,16 +22,15 @@
         <h2>Ajouter un nouvel article</h2>
         <input type="text" id="newItemName" placeholder="Nom de l'article">
         <button onclick="addItem()">Ajouter</button>
-        
         <button onclick="resetInventory()">Réinitialiser l'inventaire</button>
     </div>
 
-    <script>
-          import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-          import { getFirestore, doc, setDoc, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+        import { getFirestore, doc, setDoc, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-          // Configuration Firebase
-          const firebaseConfig = {
+        // Configuration Firebase
+        const firebaseConfig = {
             apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
             authDomain: "inventaire-poplab.firebaseapp.com",
             projectId: "inventaire-poplab",
@@ -42,11 +38,12 @@
             messagingSenderId: "490095435720",
             appId: "1:490095435720:web:7ce0713993e42b59086afd",
             measurementId: "G-19DVTE3W11"
-          };
+        };
 
-  // Initialize Firebase and Firestore
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+        // Initialize Firebase and Firestore
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
         // Fonction pour charger les articles enregistrés dans le Local Storage
         function loadInventory() {
             const inventoryDiv = document.getElementById('inventory');
@@ -111,6 +108,7 @@
                 name: newItemName,
                 quantity: 0
             };
+
             // Ajouter à Firestore
             await setDoc(doc(db, "inventoryItems", newItem.id), newItem);
             createItemElement(newItem.id, newItem.name, newItem.quantity);
@@ -187,30 +185,8 @@
             loadInventory();
         }
 
+        // Charger l'inventaire au démarrage
+        window.onload = loadInventory;
     </script>
-
-    <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
-    authDomain: "inventaire-poplab.firebaseapp.com",
-    projectId: "inventaire-poplab",
-    storageBucket: "inventaire-poplab.firebasestorage.app",
-    messagingSenderId: "490095435720",
-    appId: "1:490095435720:web:7ce0713993e42b59086afd",
-    measurementId: "G-19DVTE3W11"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
 </body>
 </html>
